<resources>
    <string name="app_name" translatable="false">SafeDrive</string>
    <string name="str_brand">Brand</string>
    <string name="str_cars">Cars</string>
    <string name="str_choose_car_to_continue">Choose a car to continue</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_view_list">List view</string>
    <string name="str_view_carousel">Carousel view</string>
    <string name="str_add_vehicle">Add a new vehicle</string>
    <string name="str_vehicle_s_brand_logo">Vehicle\'s brand</string>
    <string name="str_vehicle_type">Vehicle\'s type</string>
    <string name="more">More</string>
    <string name="str_app_logo">App logo</string>
    <string name="str_new_vehicle">New vehicle</string>
    <string name="str_brands">Brands</string>
    <string name="str_choose_a_brand">Choose a brand :</string>
    <string name="str_next">Next</string>
    <string name="str_search">Search…</string>
    <string name="str_choose_model">Choose a model…</string>
    <string name="str_no_data">No data.</string>
    <string name="str_tank_capacity">Tank capacity</string>
    <string name="str_distance_covered">Distance covered</string>
    <string name="str_model">Model</string>
    <string name="str_liters">Liters</string>
    <string name="str_validate">Validate</string>
    <string name="str_finalisation">Finalisation</string>
    <string name="str_finalisation_description">You can edit the values that are not correct.</string>
    <string name="str_pub_first_vehicle_description">Register your first vehicle and SafeDrive will keep it all.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_main_header_item_settings">Settings</string>
    <string name="menu_main_header_item_logout">Log out</string>
    <string name="str_registration_number">Registration number</string>
    <string name="str_registration_input">Registration input</string>
    <string name="str_error_values_finalc">An error occured : Please make sure you\'ve entered a registration number and that the tank capacity is more than 0 (zero).</string>
    <string name="str_notification_well_done">Save done !</string>
    <string name="str_notification_save_vehicle_description">Well done, your vehicle was successfully saved. You can now using it in SafeDrive app.</string>
    <string name="str_brand_input">Brand input</string>
    <string name="str_model_input">Model input</string>
    <string name="str_show">Show</string>
    <string name="str_load">Load</string>
    <string name="str_delete">Delete</string>
    <string name="str_added_on">Added on</string>
    <string name="str_registration">Registration :</string>
    <string name="str_default_tank_cap">Default tank cap. :</string>
    <string name="str_current_tank_cap">Current tank cap. :</string>
    <string name="str_dot_distance_covered">Distance covered :</string>
    <string name="pub_fl_1_title">SafeDrive, everywhere.</string>
    <string name="pub_fl_2_title">No matter your vehicles.</string>
    <string name="pub_fl_1_description">SafeDrive is your companion which helps you everyday and everywhere you\'ll need him.</string>
    <string name="pub_fl_2_description">The main functionality stays the same, we are able to care of your vehicle no matter what type it is.</string>
    <string name="str_previous">Previous</string>
    <string name="str_finish">Finish</string>
    <string name="str_home">Home</string>
    <string name="str_statistics">Statistics</string>
    <string name="str_reminders">Reminders</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="full_time_format">HH:mm:ss</string>
    <string name="full_date_format">yyyy/MM/dd HH:mm:ss</string>
    <string name="time_format">HH:mm</string>
    <string name="str_full_refueling">Full refueling</string>
    <string name="str_partial_refueling">Partial refueling</string>
    <string name="str_add_operation">Add an operation</string>
    <string name="str_date">Date</string>
    <string name="str_time">Time</string>
    <string name="str_refueling">Refueling</string>
    <string name="str_odometer">Odometer value</string>
    <string name="str_km">Miles</string>
    <string name="str_tank_condition">Tank condition</string>
    <string name="str_empty">Empty</string>
    <string name="str_full">Full</string>
    <string name="val_liters">%1$.02fL</string>
    <string name="val_double">%1$.02f</string>
    <string name="val_percent_parenthesis">(%d%%)</string>
    <string name="str_your_refill">Your refill</string>
    <string name="str_init">Initialization</string>
    <string name="str_price">Price</string>
    <string name="str_price_per_l">Price/L</string>
    <string name="str_email_adress">Email address</string>
    <string name="str_password">Password</string>
    <string name="str_log_in">Log in</string>
    <string name="str_already_have_an_account">Already have an account ?</string>
    <string name="str_doesn_t_have_an_account">Doesn\'t have an account ?</string>
    <string name="str_greet_logini">Welcome here, what\'s going on ?</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_your_personal_infos">Your personal informations</string>
    <string name="str_first_name">First name</string>
    <string name="str_last_name">Last name</string>
    <string name="str_your_phone_number">Your phone number</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_your_safedrive_account">Your SafeDrive account</string>
    <string name="str_confirm_password">Confirm password</string>
    <string name="str_error_empty_box">You must enter a value here</string>
    <string name="str_task_error">Sorry, something gone wrong. Please retry</string>
    <string name="str_you_are_now_logged_in">You are now logged in !</string>
    <string name="str_you_must_be_logged_in">You must be logged in before continue</string>
    <string name="str_error_pwd_confirm_password">The \'Confirm password\' value isn\'t the same as the \'Password\' value !</string>
    <string name="str_no_user_found">There\'s no user found with this paremeters ! Veuillez réessayer</string>
    <string name="str_logged_in_as">Logged in as %s</string>
    <string name="str_user_success_update">Your account data has been successfully updated.</string>
</resources>
