<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FFF">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">
        <TextView
            android:id="@+id/dialog_vehicle_add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_added_on"/>
        <TextView
            android:id="@+id/dialog_vehicle_add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dialog_vehicle_add_text"
            android:textStyle="bold"
            android:text="21/03/2020"
            android:layout_marginStart="8dp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/dialog_vehicle_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="Frank Kevy"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp">
        <TextView
            android:id="@+id/dialog_vehicle_brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mercedes-Benz"
            android:fontFamily="@font/segoe_ui_regular"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/dialog_vehicle_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/dialog_vehicle_brand_name"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="Mercedes-Benz"
            android:textSize="22sp"
            android:textAllCaps="true"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_registration"
            android:layout_marginTop="0dp"/>
        <TextView
            android:id="@+id/dialog_vehicle_registration_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="LT800BE"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_default_tank_cap"
            android:layout_marginTop="0dp"/>
        <TextView
            android:id="@+id/dialog_vehicle_default_tank_capacity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="5.5L"
            android:textSize="19sp"
            android:textStyle="italic"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_current_tank_cap"
            android:layout_marginTop="0dp"/>
        <TextView
            android:id="@+id/dialog_vehicle_current_tank_capacity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="5.5L"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="#000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/str_dot_distance_covered"
            android:layout_marginTop="0dp"/>
        <TextView
            android:id="@+id/dialog_vehicle_distance_covered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="1289Km"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="#000"/>
    </LinearLayout>


    </LinearLayout>