<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.VehiclesActivity">
    <include
        layout="@layout/fragment_header_primary"
        android:id="@+id/activity_vehicles_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <RelativeLayout
        android:id="@+id/activity_vehicles_connected_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/colorOptimalBlueDark"
        app:layout_constraintTop_toBottomOf="@id/activity_vehicles_header">
        <TextView
            android:id="@+id/activity_vehicles_logged_in_user_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_logged_in_as"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:fontFamily="@font/segoe_ui_bold"
            android:textColor="@android:color/white"/>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/activity_vehicles_global_name_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:paddingBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_vehicles_connected_popup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/str_cars"
            android:textSize="@dimen/title_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarker"
            android:text="@string/str_choose_car_to_continue"
            android:textSize="@dimen/default_text"
            />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_vehicles_main_controls_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_vehicles_global_name_block">

        <ImageButton
            android:id="@+id/activity_vehicles_control_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:src="@drawable/ic_add_black_36dp"
            android:contentDescription="@string/str_add_vehicle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="8dp"
            android:layout_margin="8dp"
            />
        <ImageButton
            android:id="@+id/activity_vehicles_control_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:src="@drawable/ic_refresh_black_36dp"
            android:contentDescription="@string/str_refresh"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_vehicles_control_add"
            android:padding="8dp"
            android:layout_margin="8dp"
            />


<!--
        <ImageButton
            android:id="@+id/activity_vehicles_control_view_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:src="@drawable/ic_view_list_gray_48dp"
            android:contentDescription="@string/str_view_list"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:layout_margin="8dp"
            />
        <ImageButton
            android:id="@+id/activity_vehicles_control_view_carousel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:src="@drawable/ic_view_carousel_gray_48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/str_view_carousel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activity_vehicles_control_view_list"
            android:padding="8dp"
            android:layout_margin="8dp"
            />
-->

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/activity_vehicles_main_controls_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorBitDarker"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/activity_vehicles_main_controls_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_vehicles_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            tools:listitem="@layout/item_vehicle_default"/>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>