<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.LoginActivity"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/black_wallpaper"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/mtxtx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mtxty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/str_greet_logini"
            android:textColor="@android:color/white"
            android:fontFamily="@font/segoe_ui"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/mtxty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/str_log_in"
            android:textColor="@android:color/white"
            android:textSize="46sp"
            android:fontFamily="@font/segoe_ui_bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="24dp"
        android:orientation="vertical">
        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="3">
                <ImageView
                    android:id="@+id/mlg0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_icons8_email"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/mtxt0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_email_adress"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mlg0"
                    android:layout_marginStart="16dp"
                    android:textColor="#000"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/activity_login_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:hint="abc@gmail.com"
                    android:background="@drawable/modern_rounded_textbox_light_gray"
                    app:layout_constraintTop_toBottomOf="@id/mtxt0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="3">
                <ImageView
                    android:id="@+id/mlg1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_icons8_password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/mtxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mlg1"
                    android:layout_marginStart="16dp"
                    android:textColor="#000"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/activity_login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/str_password"
                    android:background="@drawable/modern_rounded_textbox_light_gray"
                    app:layout_constraintTop_toBottomOf="@id/mtxt1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <Button
            android:id="@+id/activity_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:padding="@dimen/default_padding"
            android:background="@drawable/modern_rounded_button_primary"
            android:text="@string/str_log_in"
            android:textSize="20sp"
            android:fontFamily="@font/segoe_ui_bold"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_doesn_t_have_an_account"
            android:textAlignment="center"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>